# utctime

./: .pylintrc  README.rst  pyproject.toml  tox.ini
.github/workflows/: docs-preview.yaml  release.yaml  utctime.yaml
docs/: api.rst  conf.py  index.rst
tests/: test_utctime.py
utctime/: __init__.py  utctime.py
