[project]
name = "utctime"
version = "0.2.0-beta"

description = "A simple and type-safe way of working with UTC datetimes and ISO 8601 strings."

requires-python = ">= 3.9"
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["utc", "datetime", "iso", "iso8601", "time", "utility", "util"]
dependencies = []

[project.optional-dependencies]
docs = ["sphinx-rtd-theme >= 1.2.0", "pytest >= 6.2.0"]

[project.urls]
Documentation = "https://utctime.readthedocs.io"
Source = "https://github.com/dmayo3/utctime"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.bumpver]
current_version = "0.2.0-beta"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"utctime/__init__.py" = ["{version}"]
"README.rst" = ["{version}"]
